--- a/videos.html
+++ b/videos.html
@@ -175,7 +175,7 @@
   <div class="video-card">
     <h3>1. Inflation Explained</h3>
     <iframe 
-      src="https://drive.google.com/file/d/1xCs8c246gJ2l1edE3-isNlKJ8aobqHWG/preview" 
+      src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen" 
       width="100%" 
       height="300" 
       allow="autoplay" 
