--- a/vid 1.html
+++ b/vid 1.html
@@ -181,7 +181,7 @@
     <div class="section-title">📌 Inflation Explained</div>
     <div class="video-card">
       <iframe 
-        src="https://drive.google.com/file/d/1xCs8c246gJ2l1edE3-isNlKJ8aobqHWG/preview" 
+        src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen" 
         allow="autoplay" 
         allowfullscreen>
       </iframe>
